--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-react": "^7.0.0",
+    "ckeditor5-custom-build": "file:ckeditor5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.383.0",
