--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ckeditor5-custom-build": "file:ckeditor5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dot": "^1.1.3",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "react": "^18",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.0",
+    "@types/dot": "^1.1.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
