--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dot": "^1.1.3",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "react": "^18",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@testing-library/react": "^16.0.0",
     "@types/dot": "^1.1.7",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
