--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@testing-library/react": "^16.0.0",
     "@types/dot": "^1.1.7",
     "@types/file-saver": "^2.0.7",
