--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^7.0.0",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-menubar": "^1.0.4",
     "ckeditor5-custom-build": "file:ckeditor5",
@@ -28,6 +30,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@mdx-js/loader": "^3.0.1",
     "@tailwindcss/typography": "^0.5.13",
     "@testing-library/react": "^16.0.0",
     "@types/dot": "^1.1.7",
